--- a/index.html
+++ b/index.html
@@ -40,29 +40,29 @@
     <aside>
         <div class="cart--area">
             <div class="menu-closer">❌</div>
-            <h1>Suas Pizzas</h1>
+            <h1>Pepperoni Pizzas</h1>
             <div class="cart"></div>
             <div class="cart--details">
                 <div class="cart--totalitem subtotal">
                     <span>Subtotal</span>
-                    <span>R$ --</span>
+                    <span>$ --</span>
                 </div>
                 <div class="cart--totalitem desconto">
                     <span>Desconto (-10%)</span>
-                    <span>R$ --</span>
+                    <span>$ --</span>
                 </div>
                 <div class="cart--totalitem total big">
                     <span>Total</span>
-                    <span>R$ --</span>
+                    <span>$ --</span>
                 </div>
-                <div class="cart--finalizar">Finalizar a compra</div>
+                <div class="cart--finalizar">Finalize purchase/div>
             </div>
         </div>
     </aside>
 <!--Modal-->
     <div class="pizzaWindowArea">
         <div class="pizzaWindowBody">
-            <div class="pizzaInfo--cancelMobileButton">Voltar</div>
+            <div class="pizzaInfo--cancelMobileButton">go back</div>
             <div class="pizzaBig">
                 <img src="" />
             </div>
@@ -70,17 +70,17 @@
                 <h1>--</h1>
                 <div class="pizzaInfo--desc">--</div>
                 <div class="pizzaInfo--sizearea">
-                    <div class="pizzaInfo--sector">Tamanho</div>
+                    <div class="pizzaInfo--sector">Size</div>
                     <div class="pizzaInfo--sizes">
-                        <div data-key="0" class="pizzaInfo--size">PEQUENA <span>--</span></div>
-                        <div data-key="1" class="pizzaInfo--size">MÉDIO <span>--</span></div>
-                        <div data-key="2" class="pizzaInfo--size selected">GRANDE <span>--</span></div>
+                        <div data-key="0" class="pizzaInfo--size">SMALL <span>--</span></div>
+                        <div data-key="1" class="pizzaInfo--size">MEDIUM <span>--</span></div>
+                        <div data-key="2" class="pizzaInfo--size selected">LARGE<span>--</span></div>
                     </div>
                 </div>
                 <div class="pizzaInfo--pricearea">
-                    <div class="pizzaInfo--sector">Preço</div>
+                    <div class="pizzaInfo--sector">Price</div>
                     <div class="pizzaInfo--price">
-                        <div class="pizzaInfo--actualPrice">R$ --</div>
+                        <div class="pizzaInfo--actualPrice">$ --</div>
                         <div class="pizzaInfo--qtarea">
                             <button class="pizzaInfo--qtmenos">-</button>
                             <div class="pizzaInfo--qt">1</div>
@@ -88,8 +88,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="pizzaInfo--addButton">Adicionar ao carrinho</div>
-                <div class="pizzaInfo--cancelButton">Cancelar</div>
+                <div class="pizzaInfo--addButton">Add to Cart</div>
+                <div class="pizzaInfo--cancelButton">Cancel/div>
             </div>
         </div>
     </div>
